# nb-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: command-reference.md  compatibility.md  cookbook.md  design.md  release-checklist.md  requirements.md  troubleshooting.md
src/nb_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  manual.py  output.py  parsing.py  workflows.py
tests/: test_cli.py  test_client.py  test_config.py  test_live_integration.py
